tests/invalid_submodules/undef_mod_qual.err_exp
undef_mod_qual.m:015: In clause for predicate `main'/2:
undef_mod_qual.m:015:   error: undefined predicate `foo.bletchx'/2.
undef_mod_qual.m:015:   [38;5;226m(Did you mean `bletch'?)[39;49m
